Add link to shop.html

--- a/WebContent/shop.html
+++ b/WebContent/shop.html
@@ -10,6 +10,8 @@
 
 <h2 align="center"><a href="listorder.jsp">List All Orders</a></h2>
 
+<h2 align="center"><a href="index.jsp">New main page</a></h2>
+
 </body>
 </head>
 
